[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muscular_hydrostat"
version = "0.0"
authors = [
    { name="Alex Choi", email="choialex@uw.edu" },
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = [ "src" ]
