[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydrostat"
version = "0.0.1"
authors = [
    { name="Alex Choi", email="choialex@uw.edu" },
]
description = "Simulation and control of a muscular hydrostat"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydrostat"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]
pythonpath = [ "src" ]
